#+STARTUP:showall
* NEWS (user visible changes & bigger non-visible ones)

* 1.5.x (unreleased, development version)

*** mu

    - Where available (and with suitable glib), log to the systemd journal
      instead of a =~/.cache/mu.log=

    - Follow symlinks in maildirs, and support moving messsages between across
      multiple filesystems (but note that that is quite a bit slower than the
      single-filesystem case)

    - Optionally provide readline support for the mu server (when in tty-mode)

    - Reworked the way mu generates s-expressions for mu4e; they are created
      programmatically now instead of through string building.

*** mu4e

    - Include maildir-shortcuts in the main-view with overall/unread counts,
      similar to bookmarks, and with the same ~:hide~ and ~:hide-unread~ properties.
      Note that for the latter, you see to update your maildir-shortcuts to the
      new format, as explained in the ~mu4e-maildir-shortcuts~ docstring.

      You can set ~mu4e-main-hide-fully-read~ to hide any bookmarks/maildirs that
      have no unread messages.

    - Add some more properties for use in capturing org-mode links to messages /
      queries. See [[info:mu4e#Org-mode links][the mu4e manual]] for details.

    - Honor ~truncate-string-ellipsis~ so you can now use 'fancy' ellipses for
      truncated strings with ~(setq truncate-string-ellipsis "…")~


* 1.4 (released, as of April 18 2020)

*** mu

    - mu now defaults to the [[https://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html][XDG Base Directory Specification]] for the default
      locations for various files. E.g. on Unix the mu database now lives under
      ~~/.cache/mu/~ rather than ~~/.mu~. You can still use the old location by
      passing ~--muhome=~/.mu~ to various ~mu~ commands, or setting ~(setq
      mu4e-mu-home "~/.mu")~ for ~mu4e~.

      If your ~~/.cache~ is volatile (e.g., is cleared on reboot), you may want